apps/media/sonarr/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-sonarr/
#

apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: sonarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: sonarr
  type: ClusterIP
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: sonarr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: sonarr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: sheol
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.16 # {"$imagepolicy": "media:sonarr"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: sonarr-pvc
              mountPath: /config
            - name: media-data-pvc
              mountPath: /data
      volumes:
        - name: sonarr-pvc
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
