apps/media/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.powell.place`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: sonarr
          port: http
